fix wrong information about bcx

--- a/cn/index.html
+++ b/cn/index.html
@@ -102,10 +102,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <ul class="toplist toppadding">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
-              <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://www.facebook.com/OfficialBCXTeam"><i class="fab fa-facebook"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/r/BCXofficial//"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me/BCX_en"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
 
           </div>
@@ -328,7 +328,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","speed":1000,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":700,"to":"y:[175%];","mask":"x:inherit;y:inherit;","ease":"Power2.easeInOut"},{"frame":"hover","speed":"300","ease":"Power2.easeOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;"}]'
                     data-textAlign="['left','left','left','left']"
 
-                    style="z-index: 6"> <a target="_blank" href="https://t.me_EN" class="slider-but-1 roboto font-weight-7 uppercase">加入我们</a>
+                    style="z-index: 6"> <a target="_blank" href="https://t.me/BCX_en" class="slider-but-1 roboto font-weight-7 uppercase">加入我们</a>
                 </div>
               </li>
             </ul>
@@ -511,7 +511,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p class="padding-bottom-2">BCX将会进一步开放，拥抱现有的所有平台与网络，可在链上实现多种场景，例如支付，结算，供应链，账单，证据存储，版权，物联网，游戏等等。</p>
 
             <a href="https://github.com/BitcoinX-project/BitcoinX" class="but-stbutton-3 roboto font-weight-7 uppercase ">查看BCX源代码</a>
-            <a href="https://t.me_EN" class="but-stbutton-3 roboto font-weight-7 uppercase ">加入我们</a><br/>
+            <a href="https://t.me/BCX_en" class="but-stbutton-3 roboto font-weight-7 uppercase ">加入我们</a><br/>
 
             <br/>
           </div>
@@ -968,7 +968,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="title_line"></div>
               <div class="qlinks">
                 <ul>
-                  <li><a target="_blank" href="https://twitter.com_team">查看最新推文</a></li>
+                  <li><a target="_blank" href="https://twitter.com/bcx_team">查看最新推文</a></li>
                   <li><a target="_blank" href="https://www.reddit.com/rofficial/">查看Reddit</a></li>
                   <li><a target="_blank" href="https://bitcointalk.org/index.php?topic=4500409.0">查看Bitcointalk</a></li>
                 </ul>
@@ -1009,10 +1009,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-4 col-sm-4 col-xs-4 text-right respo no-padding-right">
             <ul class="footer-social-icons round">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
-              <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://www.facebook.com/OfficialBCXTeam"><i class="fab fa-facebook"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/r/BCXofficial//"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me/BCX_en"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
         </div>
         <!--end item-->
@@ -1042,7 +1042,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div id="close" class="close"><i class="fa fa-times"></i></div>
     <div id="new"><span>新官网上线</span></div>
     <p>全新的BitcoinX官网刚刚发布！如果您有任何疑问，请通过Telegram告知我们。</p>
-    <a target="_blank" href="https://t.me_EN" target="_blank" class="button">加入我们</a>
+    <a target="_blank" href="https://t.me/BCX_en" target="_blank" class="button">加入我们</a>
 </div>
 
 <div id="plus"><span><br>&nbsp;<i class="fab fa-telegram-plane"></i></span></div>
