--- a/cn/contributors.html
+++ b/cn/contributors.html
@@ -90,10 +90,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <ul class="toplist toppadding">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
-              <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://www.facebook.com/OfficialBCXTeam"><i class="fab fa-facebook"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/r/BCXofficial//"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me/BCX_en"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
           </div>
         </div>
@@ -293,7 +293,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="title_line"></div>
               <div class="qlinks">
                 <ul>
-                  <li><a target="_blank" href="https://twitter.com_team">查看最新推文</a></li>
+                  <li><a target="_blank" href="https://twitter.com/bcx_team">查看最新推文</a></li>
                   <li><a target="_blank" href="https://www.reddit.com/rofficial/">查看Reddit</a></li>
                   <li><a target="_blank" href="https://bitcointalk.org/index.php?topic=4500409.0">查看Bitcointalk</a></li>
                 </ul>
@@ -334,10 +334,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-4 col-sm-4 col-xs-4 text-right respo no-padding-right">
             <ul class="footer-social-icons round">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
-              <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://www.facebook.com/OfficialBCXTeam"><i class="fab fa-facebook"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/r/BCXofficial//"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me/BCX_en"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
         </div>
         <!--end item-->
