--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <ul class="toplist toppadding">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
-              <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://www.facebook.com/OfficialBCXTeam"><i class="fab fa-facebook"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/r/BCXofficial//"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me/BCX_en"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
 
           </div>
@@ -329,7 +329,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     data-frames='[{"from":"y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;","speed":1000,"to":"o:1;","delay":2000,"ease":"Power4.easeInOut"},{"delay":"wait","speed":700,"to":"y:[175%];","mask":"x:inherit;y:inherit;","ease":"Power2.easeInOut"},{"frame":"hover","speed":"300","ease":"Power2.easeOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;"}]'
                     data-textAlign="['left','left','left','left']"
 
-                    style="z-index: 6"> <a target="_blank" href="https://t.me_EN" class="slider-but-1 roboto font-weight-7 uppercase">Join our Telegram group</a>
+                    style="z-index: 6"> <a target="_blank" href="https://t.me/BCX_en" class="slider-but-1 roboto font-weight-7 uppercase">Join our Telegram group</a>
                 </div>
               </li>
             </ul>
@@ -512,7 +512,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <p class="padding-bottom-2"> BitcoinX will continue to evolve. By embracing all existing platforms and networks, this allows various scenarios to be achieved on chain. Payment, clearing and settlement, supply chain, bills, evidence storage, copyright, IoT and gaming will be able to be integrated on the BitcoinX blockchain.</p>
 
             <a href="https://github.com/BitcoinX-project/BitcoinX" class="but-stbutton-3 roboto font-weight-7 uppercase ">View source code</a>
-            <a href="https://t.me_EN" class="but-stbutton-3 roboto font-weight-7 uppercase ">Join us on Telegram</a><br/>
+            <a href="https://t.me/BCX_en" class="but-stbutton-3 roboto font-weight-7 uppercase ">Join us on Telegram</a><br/>
 
             <br/>
           </div>
@@ -969,7 +969,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="title_line"></div>
               <div class="qlinks">
                 <ul>
-                  <li><a target="_blank" href="https://twitter.com_team">View latest Tweets</a></li>
+                  <li><a target="_blank" href="https://twitter.com/bcx_team">View latest Tweets</a></li>
                   <li><a target="_blank" href="https://www.reddit.com/rofficial/">View Reddit</a></li>
                   <li><a target="_blank" href="https://bitcointalk.org/index.php?topic=4500409.0">View Bitcointalk</a></li>
                 </ul>
@@ -1010,10 +1010,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="col-md-4 col-sm-4 col-xs-4 text-right respo no-padding-right">
             <ul class="footer-social-icons round">
               <li><a target="blank" href="https://github.com/BitcoinX-project/BitcoinX/releases"><i class="fab fa-github"></i></a></li>
-              <li><a target="blank" href="https://twitter.com_team"><i class="fab fa-twitter"></i></a></li>
-              <li><a target="blank" href="https://www.facebook.com/coinx.bit.9"><i class="fab fa-facebook"></i></a></li>
-              <li><a target="blank" href="https://www.reddit.com/user_org/"><i class="fab fa-reddit"></i></a></li>
-              <li><a target="blank" href="https://t.me_EN"><i class="fab fa-telegram-plane"></i></a></li>
+              <li><a target="blank" href="https://twitter.com/bcx_team"><i class="fab fa-twitter"></i></a></li>
+              <li><a target="blank" href="https://www.facebook.com/OfficialBCXTeam"><i class="fab fa-facebook"></i></a></li>
+              <li><a target="blank" href="https://www.reddit.com/r/BCXofficial//"><i class="fab fa-reddit"></i></a></li>
+              <li><a target="blank" href="https://t.me/BCX_en"><i class="fab fa-telegram-plane"></i></a></li>
             </ul>
         </div>
         <!--end item-->
@@ -1043,7 +1043,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div id="close" class="close"><i class="fa fa-times"></i></div>
     <div id="new"><span>New website online!</span></div>
     <p>The new BitcoinX website has just been released! If you have any questions, please let us know on Telegram.</p>
-    <a target="_blank" href="https://t.me_EN" target="_blank" class="button">Join Telegram</a>
+    <a target="_blank" href="https://t.me/BCX_en" target="_blank" class="button">Join Telegram</a>
 </div>
 
 <div id="plus"><span><br>&nbsp;<i class="fab fa-telegram-plane"></i></span></div>
